feat: system dashboards
